syntax = "proto3";

option go_package = ".;pb";

service NameService {
  rpc GetName(Empty) returns (NameResponse);
  rpc SetName(NameRequest) returns (Empty);
}

message Empty {
}

message NameResponse {
  string name = 1;
}

message NameRequest {
  string name = 1;
}